Complete the CSV batch import for Host filter section.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -450,7 +450,8 @@
     "txt-mark": "Mark",
     "txt-parentDept": "Parent Department",
     "txt-frMotpMsg": "Please enter FR-MOTP code",
-    "txt-patchSuccess": "Patch Success"
+    "txt-patchSuccess": "Patch Success",
+    "txt-csvFileError": "CSV column error"
   },
 
   "alert": {
