--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -169,6 +169,7 @@
   "txt-commonModule": "一般模組",
   "txt-configModule": "設定模組",
   "txt-socModule": "SOC模組",
+  "txt-accountModule": "帳號模組",
   "txt-host": "主機",
   "txt-group": "群組",
   "txt-priority": "優先",
