Carry the patch info to Vans Patch dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -166,10 +166,10 @@
   "txt-column": "Column",
   "txt-ip": "IP",
   "txt-domain": "Domain",
-  "txt-commonModule": "Common Module",
-  "txt-configModule": "Configuration Module",
-  "txt-socModule": "SOC Module",
-  "txt-accountModule": "Account Module",
+  "txt-Module_Common": "Common Module",
+  "txt-Module_Config": "Configuration Module",
+  "txt-Module_Soc": "SOC Module",
+  "txt-Module_Account": "Account Module",
   "txt-host": "Host",
   "txt-group": "Group",
   "txt-priority": "Priority",
