--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -166,10 +166,10 @@
   "txt-column": "欄位",
   "txt-ip": "IP",
   "txt-domain": "網域",
-  "txt-commonModule": "一般模組",
-  "txt-configModule": "設定模組",
-  "txt-socModule": "SOC模組",
-  "txt-accountModule": "帳號模組",
+  "txt-Module_Common": "一般模組",
+  "txt-Module_Config": "設定模組",
+  "txt-Module_Soc": "SOC模組",
+  "txt-Module_Account": "帳號模組",
   "txt-host": "主機",
   "txt-group": "群組",
   "txt-priority": "優先",
