Task status code updates.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -901,12 +901,17 @@
     "txt-executeFailure": "Failure",
     "txt-executeNotSupport": "Not Support",
     "txt-executeWaiting": "Waiting",
-    "txt-netProxyFail": "File upload to NetProxy failed",
-    "txt-msgQueueFail": "Message queue failed",
-    "txt-taskReceived": "Task Received",
-    "txt-downloadCompleted": "Download Complted",
-    "txt-executeCompleted": "Execution Complted",
-    "txt-executeAberrant": "Execution Aberrant",
+    "txt-taskStatusCode1": "Task received",
+    "txt-taskStatusCode2": "Download completed",
+    "txt-taskStatusCode3": "Finished checking file security",
+    "txt-taskStatusCode4": "Finished executing script",
+    "txt-taskStatusCode5": "Finished checking registry",
+    "txt-taskStatusCode-1": "File upload to NetProxy failed",
+    "txt-taskStatusCode-2": "Message queue failed",
+    "txt-taskStatusCode-2004": "Download file failed",
+    "txt-taskStatusCode-22001": "Abnormal file integrity",
+    "txt-taskStatusCode-22002": "Execution aberrant",
+    "txt-taskStatusCode-22003": "Registry aberrant",
     "txt-hmdImportExport": "HMD Import/Export",
     "scan-list": {
       "txt-yara": "Yara Scan",
