--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -901,12 +901,17 @@
     "txt-executeFailure": "執行失敗",
     "txt-executeNotSupport": "不支援",
     "txt-executeWaiting": "等待中",
-    "txt-netProxyFail": "檔案上傳NetProxy失敗",
-    "txt-msgQueueFail": "分流異常",
-    "txt-taskReceived": "收到派送任務",
-    "txt-downloadCompleted": "下載完成",
-    "txt-executeCompleted": "執行完成",
-    "txt-executeAberrant": "執行結果異常",
+    "txt-taskStatusCode1": "收到派送任務",
+    "txt-taskStatusCode2": "下載完成",
+    "txt-taskStatusCode3": "完成檢查檔案完整性",
+    "txt-taskStatusCode4": "完成執行腳本",
+    "txt-taskStatusCode5": "完成比對登錄",
+    "txt-taskStatusCode-1": "檔案上傳NetProxy失敗",
+    "txt-taskStatusCode-2": "分流異常",
+    "txt-taskStatusCode-2004": "下載失敗",
+    "txt-taskStatusCode-22001": "檔案完整性異常",
+    "txt-taskStatusCode-22002": "執行失敗",
+    "txt-taskStatusCode-22003": "檢查登錄失敗",
     "txt-hmdImportExport": "HMD匯出/匯入",
     "scan-list": {
       "txt-yara": "Yara Scan",
