--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -833,7 +833,7 @@
     "txt-yaraRules": "Yara Rules",
     "txt-gcbVersion": "GCB版本",
     "txt-eventsLogCount": "事件日誌數量",
-    "txt-taskFailure": "執行異常",
+    "txt-taskFailure": "異常 / 失敗",
     "txt-notSupport": "不支援",
     "txt-passCount": "通過",
     "txt-totalItem": "總項目",
@@ -893,7 +893,6 @@
     "txt-patch-delete": "刪除指令",
     "txt-taskRunning": "派送中",
     "txt-taskComplete": "已派送",
-    "txt-taskFailure": "派送失敗",
     "txt-taskNotSupport": "不支援",
     "txt-taskWaiting": "等待中",
     "txt-executeRunning": "等待執行",
