Update locale files.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -423,9 +423,9 @@
     "txt-basicInfo": "Basic Info",
     "txt-basicInfoExample": "Basic Info Example",
     "txt-availableHost": "Available Host",
-    "txt-vansNotes": "Status and Notes",
+    "txt-vansNotes": "Custom Group / Status",
     "txt-deleteVansNotes": "Delete Notes",
-    "txt-status": "Status",
+    "txt-status": "Custom Group / Status",
     "txt-annotation": "Notes",
     "txt-vendor": "Vendor",
     "txt-product": "Product",
@@ -1184,7 +1184,7 @@
     "system": "System",
     "deviceType": "Type",
     "scanInfo": "Safety Scan Info",
-    "status": "Status",
+    "status": "Custom Group / Status",
     "annotation": "Annotation",
     "keyword": "Keyword",
     "errCode": "Error",
