--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -423,9 +423,9 @@
     "txt-basicInfo": "基本資訊",
     "txt-basicInfoExample": "基本資訊範例",
     "txt-availableHost": "存在主機",
-    "txt-vansNotes": "自定義群組/處理狀態",
+    "txt-vansNotes": "自定義群組",
     "txt-deleteVansNotes": "刪除註記",
-    "txt-status": "自定義群組/處理狀態",
+    "txt-status": "自定義群組",
     "txt-annotation": "註記",
     "txt-vendor": "廠商",
     "txt-product": "產品",
@@ -1184,7 +1184,7 @@
     "system": "使用系統",
     "deviceType": "裝置類型",
     "scanInfo": "安全掃描資訊",
-    "status": "自定義群組/處理狀態",
+    "status": "自定義群組",
     "annotation": "註記",
     "keyword": "關鍵字",
     "errCode": "錯誤訊息",
