Begin the edit logic updates for HMD settings page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -829,6 +829,7 @@
     "txt-patchProduct": "Patch Name",
     "txt-patchVendor": "Patch Vendor",
     "txt-patchVersion": "Patch Version",
+    "txt-getProductRegex": "Get Product Regex",
     "txt-readyPatch": "Ready to Patch",
     "txt-rePatch": "Patch Again",
     "txt-patchFailure": "Select failure ones",
