Complete the updates for HMD settings update logic.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -188,6 +188,7 @@
   "txt-reference": "Reference",
   "txt-syslog": "Syslog",
   "txt-minutes": "Minutes",
+  "txt-load": "Load",
   "txt-viewJSON": "$t(txt-view) JSON",
   "txt-exportCSV": "$t(txt-export) CSV",
   "txt-exportPDF": "$t(txt-export) PDF",
@@ -829,7 +830,6 @@
     "txt-patchProduct": "Patch Name",
     "txt-patchVendor": "Patch Vendor",
     "txt-patchVersion": "Patch Version",
-    "txt-getProductRegex": "Get Product Regex",
     "txt-readyPatch": "Ready to Patch",
     "txt-rePatch": "Patch Again",
     "txt-patchFailure": "Select failure ones",
