--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -188,6 +188,7 @@
   "txt-reference": "參考",
   "txt-syslog": "日誌串流",
   "txt-minutes": "分鐘",
+  "txt-load": "載入",
   "txt-viewJSON": "$t(txt-view)JSON",
   "txt-exportCSV": "$t(txt-export)CSV",
   "txt-exportPDF": "$t(txt-export)PDF",
@@ -829,7 +830,6 @@
     "txt-patchProduct": "軟體登錄名稱",
     "txt-patchVendor": "軟體登錄廠商",
     "txt-patchVersion": "軟體登錄版本",
-    "txt-getProductRegex": "Get Product Regex",
     "txt-readyPatch": "開始派送",
     "txt-rePatch": "重新派送",
     "txt-patchFailure": "選擇失敗的",
