change locales to english

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -226,15 +226,15 @@
 	"txt-allSearch": "All Search",
 	"txt-flow-msg-na": "No process status to confirm",
 	"category": {
-		"0": "全部",
-		"1": "入侵攻擊類",
-		"2": "惡意程式類",
-		"3": "掃描刺探類",
-		"4": "經同意之網路攻防演練類",
-		"5": "阻斷服務類",
-		"6": "政策規則類",
-		"7": "尚需調查類",
-		"8": "系統服務類"
+		"0": "ALL",
+		"1": "Intrusion Attack",
+		"2": "Malware",
+		"3": "Scan Spying",
+		"4": "Cyber Offensive and Defensive Exercise",
+		"5": "Network Attack and Defense Drill",
+		"6": "Policy Rule",
+		"7": "Investigated",
+		"8": "System Service"
 	},
 	"status": {
 		"0": "All",
@@ -258,29 +258,29 @@
 		"10": "Finished"
 	},
 	"protectType": {
-		"0": "防毒軟體",
-		"1": "網路防火牆",
-		"2": "電子郵件過濾機制",
-		"3": "入侵偵測及防禦機制",
-		"4": "應用程式防火牆",
-		"5": "進階持續性威脅攻擊防禦措施",
-		"6": "其他"
+		"0": "Antivirus Software",
+		"1": "Firewall",
+		"2": "Email Filtering",
+		"3": "IPS/IDS",
+		"4": "Application Firewall",
+		"5": "APT Attack",
+		"6": "Other"
 	},
 	"industryType": {
-		"0": "能源",
-		"1": "水資源",
-		"2": "通訊傳播",
-		"3": "交通",
-		"4": "金融",
-		"5": "緊急救援及醫院",
-		"6": "中央及地方政府",
-		"7": "科學園區與工業區",
-		"8": "臺北區域聯防中心",
-		"9": "新北區域聯防中心",
-		"10": "桃園區域聯防中心",
-		"11": "臺中區域聯防中心",
-		"12": "臺南區域聯防中心",
-		"13": "高雄區域聯防中心"
+		"0": "Energy",
+		"1": "Water Resources",
+		"2": "Communication",
+		"3": "Transportation",
+		"4": "Finance",
+		"5": "Hospital",
+		"6": "Governments",
+		"7": "Science Parks",
+		"8": "Taipei Defense Center",
+		"9": "New Taipei Defense Center",
+		"10": "Taoyuan Defense Center",
+		"11": "Taichung Defense Center",
+		"12": "Tainan Defense Center",
+		"13": "Kaohsiung Defense Center"
 	},
 	"isac": {
 		"txt-start-setting": "Enable settings",
