--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -244,7 +244,8 @@
 		"4": "Submitted",
 		"5": "Deleted",
 		"6": "Not Analyzed",
-		"7": "Untreated"
+		"7": "Untreated",
+		"8": "Withdrawn"
 	},
 	"action": {
 		"0": "All",
