Begin adding fields for SOAR action type.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -620,6 +620,10 @@
     "txt-ip": "IP (JSON Path)",
     "txt-drop": "丟棄封包",
     "txt-severityType": "嚴重等級",
+    "txt-method": "Method",
+    "txt-url": "URL",
+    "txt-headers": "Headers",
+    "txt-requestBody": "Request Body",
     "txt-field": "Field",
     "txt-from": "From",
     "txt-to": "To",
