--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -620,6 +620,10 @@
     "txt-ip": "IP (JSON Path)",
     "txt-drop": "Drop",
     "txt-severityType": "Severity Type",
+    "txt-method": "Method",
+    "txt-url": "URL",
+    "txt-headers": "Headers",
+    "txt-requestBody": "Request Body",
     "txt-field": "Field",
     "txt-from": "From",
     "txt-to": "To",
