Add shutdown and reboot buttons for Edge.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -890,6 +890,7 @@
     "txt-lastTriggerTime": "Trigger Time",
     "txt-executeTime": "Execute Time",
     "txt-shutdownHost": "Shutdown",
+    "txt-rebootHost": "Restart",
     "txt-logoffAllUsers": "Log Off",
     "txt-netcut": "Disconnected",
     "txt-netcutResume": "Resume",
