--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -8,7 +8,7 @@
 	"txt-closeTrackedIncidents": "Close Track Menu",
 	"txt-remove-trackedIncidents": "Remove from tracking list",
 	"txt-createIncidentTools": "Event menu",
-	"txt-soc": "SOC",
+	"txt-soc": "SIT",
 	"txt-incident": "Incident",
 	"txt-createIncident": "Create Incident",
 	"txt-incident-device": "Incident Device",
