Revert SOC title.

--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -8,7 +8,7 @@
 	"txt-closeTrackedIncidents": "關閉追蹤選單",
 	"txt-remove-trackedIncidents": "從追蹤告警清單中移除",
 	"txt-createIncidentTools": "建立事件選單",
-	"txt-soc": "SIT",
+	"txt-soc": "SOC",
 	"txt-incident": "情資事件",
 	"txt-createIncident": "通報事件",
 	"txt-incident-device": "資安事件設備",
