Add Dashboard module and add /scp/ start page redirect.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -166,6 +166,7 @@
   "txt-column": "Column",
   "txt-ip": "IP",
   "txt-domain": "Domain",
+  "txt-Module_Dashboard": "Dashboard Module",
   "txt-Module_Common": "Common Module",
   "txt-Module_Config": "Configuration Module",
   "txt-Module_Soc": "SOC Module",
