--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -166,6 +166,7 @@
   "txt-column": "欄位",
   "txt-ip": "IP",
   "txt-domain": "網域",
+  "txt-Module_Dashboard": "Dashboard模組",
   "txt-Module_Common": "一般模組",
   "txt-Module_Config": "設定模組",
   "txt-Module_Soc": "SOC模組",
