Update locale files.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -168,9 +168,14 @@
   "txt-domain": "Domain",
   "txt-Module_Dashboard": "Dashboard Module",
   "txt-Module_Common": "Common Module",
-  "txt-Module_Config": "Configuration Module",
+  "txt-Module_Config": "Config Module",
   "txt-Module_Soc": "SOC Module",
   "txt-Module_Account": "Account Module",
+  "txt-Module_Edge": "Edge Module",
+  "txt-Module_Auth_System": "Auth System",
+  "txt-Module_Tenant_System": "Tenant System ",
+  "txt-Module_Depart_System": "Department System",
+  "txt-Module_Service": "Service Module",
   "txt-host": "Host",
   "txt-group": "Group",
   "txt-priority": "Priority",
