--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -171,6 +171,11 @@
   "txt-Module_Config": "設定模組",
   "txt-Module_Soc": "SOC模組",
   "txt-Module_Account": "帳號模組",
+  "txt-Module_Edge": "設備模組",
+  "txt-Module_Auth_System": "系統權限",
+  "txt-Module_Tenant_System": "租戶權限",
+  "txt-Module_Depart_System": "部門權限",
+  "txt-Module_Service": "服務模組",
   "txt-host": "主機",
   "txt-group": "群組",
   "txt-priority": "優先",
