--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -253,6 +253,7 @@
   "txt-networkInventory": "Network Inventory",
   "txt-productInfo": "Product Information",
   "txt-issuesFeedback": "Feedback",
+  "txt-multiTenancy": "Multi Tenacy",
 
   "txt-esManage": "ES Management",
   "txt-importEsIndex": "Import Index",
@@ -269,6 +270,7 @@
   "txt-deleteTitle": "Delete Title",
   "txt-deleteAccount": "Delete Account",
   "txt-deletePrivilege": "Delete Privilege",
+  "txt-deleteTenancy": "Delete Tenancy",
   "txt-unlockAccount": "Unlock Account",
   "txt-network-owner": "Owner",
   "txt-ownerList": "Owner List",
@@ -297,6 +299,7 @@
   "txt-account-unlocked": "Account is locked",
   "txt-account-unlock": "Are you sure you want to unlcok this account",
   "txt-account-delete": "Are you sure you want to delete this account",
+  "txt-tenancy-delete": "Are you sure you want to delete this tenancy",
   "txt-commaSeparated": "separated by comma ,",
   "txt-privilegeError": "The privilege is still used by the account(s)",
   "txt-ownerIsRequired": "Owner field is required",
