Update error locale files.

--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -54,6 +54,8 @@
   "-1013": "驗證碼無效",
   "-1014": "此帳號不存在",
   "-1015": "寄信失敗",
+  "-1016": "角色權限超過此帳戶權限",
+  "-1017": "非系統權限 單位, 位階, 租戶 不可為空",
 
   "-2001": "目標未明",
   "-2002": "已到期",
