--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -166,6 +166,8 @@
   "txt-column": "Column",
   "txt-ip": "IP",
   "txt-domain": "Domain",
+  "txt-tenancy": "Tenancy",
+  "txt-chooseTenancy": "Choose Tenancy",
   "txt-Module_Dashboard": "Dashboard Module",
   "txt-Module_Common": "Common Module",
   "txt-Module_Config": "Config Module",
