Update logic for Config User accounts.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -168,6 +168,7 @@
   "txt-domain": "網域",
   "txt-tenancy": "租戶",
   "txt-chooseTenancy": "選擇租戶",
+  "txt-chooseOwner": "選擇所屬人員",
   "txt-Module_Dashboard": "Dashboard模組",
   "txt-Module_Common": "一般模組",
   "txt-Module_Config": "設定模組",
