--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -168,6 +168,7 @@
   "txt-domain": "Domain",
   "txt-tenancy": "Tenancy",
   "txt-chooseTenancy": "Choose Tenancy",
+  "txt-chooseOwner": "Choose Owner",
   "txt-Module_Dashboard": "Dashboard Module",
   "txt-Module_Common": "Common Module",
   "txt-Module_Config": "Config Module",
