Add privilege module autocomplete for Config user privileges page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -179,6 +179,7 @@
   "txt-Module_Tenant_System": "Tenant System ",
   "txt-Module_Depart_System": "Department System",
   "txt-Module_Service": "Service Module",
+  "txt-Module_privilege": "Privilege Module",
   "txt-host": "Host",
   "txt-group": "Group",
   "txt-priority": "Priority",
