--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -179,6 +179,7 @@
   "txt-Module_Tenant_System": "租戶權限",
   "txt-Module_Depart_System": "部門權限",
   "txt-Module_Service": "服務模組",
+  "txt-Module_privilege": "權限模組",
   "txt-host": "主機",
   "txt-group": "群組",
   "txt-priority": "優先",
