--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -1173,6 +1173,7 @@
   },
   "ownerFields": {
     "ownerID": "ID",
+    "tenancyName": "Tenancy",
     "ownerName": "Name",
     "department": "Department",
     "title": "Title",
