--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -199,6 +199,8 @@
   "txt-syslog": "日誌串流",
   "txt-minutes": "分鐘",
   "txt-load": "載入",
+  "txt-disabled": "停用",
+  "txt-enable": "啟用",
   "txt-viewJSON": "$t(txt-view)JSON",
   "txt-exportCSV": "$t(txt-export)CSV",
   "txt-exportPDF": "$t(txt-export)PDF",
