--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -199,6 +199,8 @@
   "txt-syslog": "Syslog",
   "txt-minutes": "Minutes",
   "txt-load": "Load",
+  "txt-disabled": "Disabled",
+  "txt-enable": "Enable",
   "txt-viewJSON": "$t(txt-view) JSON",
   "txt-exportCSV": "$t(txt-export) CSV",
   "txt-exportPDF": "$t(txt-export) PDF",
