--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -56,6 +56,7 @@
   "-1015": "寄信失敗",
   "-1016": "角色權限超過此帳戶權限",
   "-1017": "非系統權限 單位, 位階, 租戶 不可為空",
+  "-1018": "租戶未啟用",
 
   "-2001": "目標未明",
   "-2002": "已到期",
