Add Tenancy transfer functionality for Tenancy page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -309,6 +309,7 @@
   "txt-commaSeparated": "separated by comma ,",
   "txt-privilegeError": "The privilege is still used by the account(s)",
   "txt-ownerIsRequired": "Owner field is required",
+  "txt-tenancyTransfer": "Process data transfer procedure (recommend)?",
 
   "txt-statistics": "Statistics",
   "txt-table": "Table",
