--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -309,6 +309,7 @@
   "txt-commaSeparated": "用逗號,區隔",
   "txt-privilegeError": "此角色還在被帳號使用中",
   "txt-ownerIsRequired": "所屬人員為必填",
+  "txt-tenancyTransfer": "是否進行資料轉移 (建議)?",
 
   "txt-statistics": "統計",
   "txt-table": "列表",
