Add more columns for SOAR action type.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -641,6 +641,31 @@
     "txt-equal": "Equal",
     "txt-ignoreCase": "Ignore Case",
     "txt-operators": "Operators",
+    "txt-dump": "Dump",
+    "txt-email": "Email",
+    "txt-hmd": "HMD",
+    "txt-netprobe": "NetProbe",
+    "txt-restful_api": "Restful API",
+    "txt-ssh": "SSH",
+    "txt-fortigatefirewallpolicy": "FortiGate Firewall Policy",
+    "txt-username": "Username",
+    "txt-password": "Password",
+    "txt-target_ip": "Target IP",
+    "txt-target_port": "Target Port",
+    "txt-command": "Command",
+    "txt-use_password": "Use Password?",
+    "txt-policy_id": "Policy ID",
+    "txt-name": "Name",
+    "txt-srcintf": "Source Interface",
+    "txt-dstintf": "Destination Interface",
+    "txt-srcaddr": "Source Address",
+    "txt-dstaddr": "Destination Address",
+    "txt-schedule": "Schedule",
+    "txt-service": "Service",
+    "txt-nat": "Network Address Translation",
+    "txt-comment": "Comment",
+    "txt-enable": "Enable",
+    "txt-disable": "Disable",
     "txt-smtpServer": "SMTP Server",
     "txt-smtpPort": "SMTP Port",
     "txt-sender": "Sender",
