--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -641,6 +641,31 @@
     "txt-equal": "Equal",
     "txt-ignoreCase": "Ignore Case",
     "txt-operators": "Operators",
+    "txt-dump": "Dump",
+    "txt-email": "Email",
+    "txt-hmd": "HMD",
+    "txt-netprobe": "NetProbe",
+    "txt-restful_api": "Restful API",
+    "txt-ssh": "SSH",
+    "txt-fortigatefirewallpolicy": "FortiGate Firewall Policy",
+    "txt-username": "使用者名稱",
+    "txt-password": "密碼",
+    "txt-target_ip": "目的IP",
+    "txt-target_port": "目的埠號",
+    "txt-command": "指令",
+    "txt-use_password": "是否需要密碼驗證",
+    "txt-policy_id": "Policy ID",
+    "txt-name": "名稱",
+    "txt-srcintf": "來源介面",
+    "txt-dstintf": "目的介面",
+    "txt-srcaddr": "來源位置",
+    "txt-dstaddr": "目的位置",
+    "txt-schedule": "排程",
+    "txt-service": "服務",
+    "txt-nat": "開啟網址轉換",
+    "txt-comment": "備註",
+    "txt-enable": "開啟",
+    "txt-disable": "關閉",
     "txt-smtpServer": "SMTP主機",
     "txt-smtpPort": "SMTP Port",
     "txt-sender": "寄件者",
