Add SOAR parameter redirect from Threats and Events page in SOAR page.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -542,6 +542,7 @@
       "txt-saveQuery": "儲存查詢條件",
       "txt-publicOpenQuery": "開啟公用查詢條件",
       "txt-publicSaveQuery": "儲存公用查詢條件",
+      "txt-addSoarFlow": "新增流程",
       "txt-querySaved": "查詢條件已儲存",
       "txt-queryName": "查詢條件名稱",
       "txt-addQuery": "新增查詢條件",
