--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -542,6 +542,7 @@
       "txt-saveQuery": "Save Query Filter",
       "txt-publicOpenQuery": "Open Public Query Filter",
       "txt-publicSaveQuery": "Save Public Query Filter",
+      "txt-addSoarFlow": "Add Flow",
       "txt-querySaved": "Query Filter Saved",
       "txt-queryName": "Query Filter Name",
       "txt-addQuery": "Add New Query",
