Add detect GCB / import GCB for GCB tab.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -870,8 +870,12 @@
     "txt-yaraRules": "Yara Rules",
     "txt-gcbVersion": "GCB Version",
     "txt-eventsLogCount": "Events Log Count",
+    "txt-testType": "Test Type",
+    "txt-importGcb": "Import GCB",
+    "txt-gcbDetection": "Detect GCB",
     "txt-taskFailure": "Task Failure",
     "txt-notSupport": "Not Support",
+    "txt-lastPassCount": "Last Pass Count",
     "txt-passCount": "Pass",
     "txt-totalItem": "Total",
     "txt-lastUpdate": "Last Update",
@@ -955,7 +959,7 @@
       "txt-yara": "Yara Scan",
       "txt-scanFile": "Malware - Windows",
       "txt-scanFileLinux": "Malware - Linux",
-      "txt-gcb": "GCB",
+      "txt-importGcbAndGcbDetection": "GCB",
       "txt-ir": "IR",
       "txt-eventTracing": "Event Tracing",
       "txt-fileIntegrity": "File Integrity",
