--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -870,8 +870,12 @@
     "txt-yaraRules": "Yara Rules",
     "txt-gcbVersion": "GCB版本",
     "txt-eventsLogCount": "事件日誌數量",
+    "txt-testType": "檢測項目",
+    "txt-importGcb": "Import GCB",
+    "txt-gcbDetection": "Detect GCB",
     "txt-taskFailure": "異常 / 失敗",
     "txt-notSupport": "不支援",
+    "txt-lastPassCount": "上次檢測通過",
     "txt-passCount": "通過",
     "txt-totalItem": "總項目",
     "txt-lastUpdate": "最近更新時間",
@@ -955,7 +959,7 @@
       "txt-yara": "Yara Scan",
       "txt-scanFile": "Malware - Windows",
       "txt-scanFileLinux": "Malware - Linux",
-      "txt-gcb": "GCB",
+      "txt-importGcbAndGcbDetection": "GCB",
       "txt-ir": "IR",
       "txt-eventTracing": "Event Tracing",
       "txt-fileIntegrity": "File Integrity",
