Add confirm modal for HMD re-trigger buttons.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -225,6 +225,7 @@
   "txt-chartTypeBar": "Bar Chart",
   "txt-connectionsSuccess": "Connections test successfully",
   "txt-connectionsFail": "Connections test fail",
+  "txt-confirmProceed": "Confirm to proceed",
 
   "txt-dashboard": "Dashboard",
   "txt-host-eng": "Host",
