Add privilege search for Config Account page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -171,6 +171,7 @@
   "txt-Module_Config": "Configuration Module",
   "txt-Module_Soc": "SOC Module",
   "txt-Module_Account": "Account Module",
+  "txt-Module_Host": "Host Module",
   "txt-host": "Host",
   "txt-group": "Group",
   "txt-priority": "Priority",
@@ -1198,6 +1199,7 @@
     "title": "Title",
     "departmentName": "Department",
     "titleName": "Title",
+    "privilege": "Privilege",
     "email": "Email"
   },
   "ipFields": {
