Add Vans config form for NCCST report dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -380,6 +380,10 @@
     "txt-report-nccst-fail": "Report Failed",
     "txt-report-withCpe": "Please onfirm the following CPE with exploit",
     "txt-report-noCpe": "No CPE with exploit found",
+    "txt-vansConfigOID": "Unit OID",
+    "txt-vansConfigUnitName": "Unit Name",
+    "txt-vansConfigApiKey": "API Key",
+    "txt-vansConfigApiUrl": "API URL",
     "txt-hostInfo": "Host Info",
     "txt-viewInfo": "View Info",
     "txt-hostList2": "Host",
