--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -380,6 +380,10 @@
     "txt-report-nccst-fail": "回報失敗",
     "txt-report-withCpe": "請再次確認以下包含漏洞的CPE是否一併送出",
     "txt-report-noCpe": "無包含漏洞的CPE",
+    "txt-vansConfigOID": "機關OID",
+    "txt-vansConfigUnitName": "機關名稱",
+    "txt-vansConfigApiKey": "API Key",
+    "txt-vansConfigApiUrl": "API URL",
     "txt-hostInfo": "主機資訊",
     "txt-viewInfo": "查看內容",
     "txt-hostList2": "主機清單",
