--- a/locales/en/accounts.json
+++ b/locales/en/accounts.json
@@ -14,6 +14,10 @@
   "roles":"Roles",
   "rights":"Rights",
   "status":"Account Status",
+  "enabled": "Enabled",
+  "disabled": "Disabled",
+  "enableAccount": "Enable Account",
+  "disableAccount": "Disable Account",
   "sex-types": {
     "unknown": "Unknown",
     "male": "Male",
@@ -58,7 +62,8 @@
     "email": "$t(l-email)",
     "unit": "$t(l-unit)",
     "title": "$t(l-title)",
-    "phone": "$t(l-phone)"
+    "phone": "$t(l-phone)",
+    "enabled": "Status"
   },
   "setNewPwd": "Set new password",
   "change-expired-pwd":"Please change your password because it has expired",
