--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -54,6 +54,7 @@
   "-1013": "Invaid one-time code",
   "-1014": "Account is not found",
   "-1015": "Failed to deliver mail",
+  "-1016": "Account is disabled",
 
   "-2001": "Unknown Target",
   "-2002": "Expired",
