--- a/locales/zh/incident.json
+++ b/locales/zh/incident.json
@@ -260,7 +260,8 @@
 		"7": "轉分析人員",
 		"8": "撤銷事件單",
 		"9": "簽核事件單",
-		"10": "結案事件單"
+		"10": "結案事件單",
+		"11": "通知聯絡人"
 	},
 	"protectType": {
 		"0": "防毒軟體",
