Add optional checkbox for SOC incident management page.

--- a/locales/en/incident.json
+++ b/locales/en/incident.json
@@ -138,6 +138,7 @@
 	"txt-incident-expired": "Expired",
 	"txt-incident-unhandled": "Unhandled",
 	"txt-incident-mine": "Mine",
+	"txt-isExpired": "Is Expired",
 	"txt-transfer": "Assign",
 	"txt-analyze": "Assign",
 	"txt-analyze-msg": "Whether to Assign",
