--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -227,6 +227,7 @@
   "txt-connectionsFail": "連線失敗",
   "txt-confirmProceed": "確認執行",
   "txt-confirmTerminate": "確認停用",
+  "txt-addedList": "已選清單",
 
   "txt-dashboard": "Dashboard",
   "txt-host-eng": "Host",
